force-app/main/default/objects/Fax__c/Fax__c.object-meta.xml
<CustomObject>
    <description>SSSW - Fax data with attachments.</description>
    <label>Fax</label>
    <nameField>
        <label>Fax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>