force-app/main/default/objects/Fax__c/fields/Emailto__c.field-meta.xml
<CustomField>
    <fullName>Emailto__c</fullName>
    <defaultValue>&quot;211119999@fax2mail.com&quot;</defaultValue>
    <label>Email To</label>
    <type>Email</type>
</CustomField>