force-app/main/default/objects/Fax__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>