force-app/main/default/objects/Fax__c/fields/FaxReceipt__c.field-meta.xml
<CustomField>
    <fullName>FaxReceipt__c</fullName>
    <label>FaxReceipt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>