force-app/main/default/objects/Fax__c/recordTypes/Outbound.recordType-meta.xml
<RecordType>
    <fullName>Outbound</fullName>
    <active>true</active>
    <description>Outbound fax</description>
    <label>Outbound</label>
</RecordType>