force-app/main/default/objects/Fax__c/listViews/AllFaxes.listView-meta.xml
<ListView>
    <fullName>AllFaxes</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Case__c</columns>
    <columns>To__c</columns>
    <columns>From__c</columns>
    <columns>Subject__c</columns>
    <columns>Body__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Faxes</label>
</ListView>