force-app/main/default/objects/Fax__c/listViews/Faxes_by_from_number.listView-meta.xml
<ListView>
    <fullName>Faxes_by_from_number</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fax__c.Outbound</value>
    </filters>
    <filters>
        <field>Subject__c</field>
        <operation>contains</operation>
    </filters>
    <label>Search for incoming fax by number &amp; date</label>
</ListView>