force-app/main/default/objects/Fax__c/listViews/InboundProcessed.listView-meta.xml
<ListView>
    <fullName>InboundProcessed</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Case__c</columns>
    <columns>To__c</columns>
    <columns>From__c</columns>
    <columns>Subject__c</columns>
    <columns>Body__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fax__c.Inbound</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/2/2014 12:00 AM</value>
    </filters>
    <label>Inbound Faxes (Processed)</label>
    <language>en_US</language>
</ListView>