force-app/main/default/objects/Fax__c/listViews/myView.listView-meta.xml
<ListView>
    <fullName>myView</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Case__c</columns>
    <columns>To__c</columns>
    <columns>From__c</columns>
    <columns>Subject__c</columns>
    <columns>Body__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fax__c.Inbound</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>03-02-2015</value>
    </filters>
    <filters>
        <field>Case__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>myView</label>
</ListView>