force-app/main/default/objects/Fax__c/listViews/OutboundErrors.listView-meta.xml
<ListView>
    <fullName>OutboundErrors</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Case__c</columns>
    <columns>To__c</columns>
    <columns>Emailto__c</columns>
    <columns>From__c</columns>
    <columns>Subject__c</columns>
    <columns>Body__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fax__c.Outbound</value>
    </filters>
    <filters>
        <field>Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Outbound Fax Errors</label>
</ListView>